--- a/fileutils.ipynb
+++ b/fileutils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "            new_filename = filename + '.fits'\n",
     "            os.rename(os.path.join(folder_path, filename), os.path.join(folder_path, new_filename))\n",
     "\n",
-    "rename_files_to_fits(r'/Users/arkhan/Documents/Aspera_Lamp_analysis/data/Nitrogen_15.5psi_0013_HV100mA_HV1.3kV_MCP2.85kV/*')"
+    "rename_files_to_fits(r'/Users/arkhan/Documents/Aspera_Lamp_analysis/data/02-29-2024/*')"
    ]
   },
   {
