removed an unused function

--- a/fileutils.ipynb
+++ b/fileutils.ipynb
@@ -8,76 +8,22 @@
    "source": [
     "import os\n",
     "import glob\n",
+    "\n",
     "def rename_files_to_fits(folder_path):\n",
+    "    \"\"\"\n",
+    "    Renames files in the specified folder path to have a '.fits' extension.\n",
+    "    \n",
+    "    Args:\n",
+    "        folder_path (str): The path to the folder containing the files.\n",
+    "    \"\"\"\n",
     "    for filename in glob.glob(folder_path):\n",
     "        if '.' not in os.path.basename(filename):\n",
     "            new_filename = filename + '.fits'\n",
     "            os.rename(os.path.join(folder_path, filename), os.path.join(folder_path, new_filename))\n",
     "\n",
+    "# Example usage\n",
     "rename_files_to_fits(r'/Users/arkhan/Documents/Aspera_Lamp_analysis/data/02-29-2024/*')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1273_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1263_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1243_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1273_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1243_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1253_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1253_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV_b/test_03_04_1263_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1233_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1273_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1263_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1303_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1313_Ar_30sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1203_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1203_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1193_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1183_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1243_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1273_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1213_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1293_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1193_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1243_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1303_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1293_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1283_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1223_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1253_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1253_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1283_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1183_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1213_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1263_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1223_Ar_60sec.phd',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1233_Ar_60sec',\n",
-       " '/Users/arkhan/Documents/Aspera_Lamp_analysis/data/03-07-2024/Argon_11psi_0014_HV250mA_HV8.3kVDial_MCP2.85kV/test_03_04_1313_Ar_30sec']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "glob.glob()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
